# binary_bakery

./: .gitignore  CMakeLists.txt  bb_decoder.h  binary_bakery.sln  binary_bakery.toml  binary_bakery_decoder.h  binary_inliner.sln  building.md  decoder.h  readme.md  zstd_static.props
.github/: bb_buildVCPKG.cmake
.github/workflows/: build-release.yml  main.yml
binary_bakery/: CMakeLists.txt  bb_main.cpp  binary_bakery.vcxproj  binary_bakery.vcxproj.filters
binary_bakery_decoder/: CMakeLists.txt
binary_bakery_decoder/include/: binary_bakery_decoder.h
binary_bakery_lib/: CMakeLists.txt  better_warnings.props  binary_bakery_lib.vcxproj  binary_bakery_lib.vcxproj.filters  byte_sequencer.h  color.h  compression.cpp  compression.h  config.cpp  config.h  content_meta.cpp  content_meta.h  encoding.cpp  encoding.h  file_tools.cpp  file_tools.h  image.cpp  image.h  payload.cpp  payload.h  tools.cpp  tools.h  universal.h
binary_bakery_lib/include/binary_bakery_lib/: color.h  compression.h  config.h  content_meta.h  file_tools.h  image.h  tools.h  universal.h
binary_bakery_lib/src/: compression.cpp  config.cpp  content_meta.cpp  file_tools.cpp  image.cpp  payload.cpp  tools.cpp
binary_inliner/: binary_image_tools.cpp  binary_image_tools.h  binary_inliner.cpp  binary_inliner.vcxproj  binary_inliner.vcxproj.filters  color.h  encoding.cpp  encoding.h  payload.h
binary_inliner_lib/: binary_image_tools.cpp  binary_image_tools.h  binary_inliner_lib.vcxproj  binary_inliner_lib.vcxproj.filters  color.h  decoding.h  encoding.cpp  encoding.h  export_macro.h  file_tools.cpp  file_tools.h  image.h  payload.cpp  payload.h  tools.cpp  tools.h
compile_metrics/: compile.ps1  compile_metrics_plot.py  config_lz4.toml  config_none.toml  config_zstd.toml  source.cpp
decoder_example/: data_store.cpp  data_store.h  decode_speed_analysis.py  decoder_example.cpp  decoder_example.vcxproj  decoder_example.vcxproj.filters  tools.cpp
decoding_perf_measurement/: data_lz4.txt  data_store.cpp  data_store.h  data_uncompressed.txt  data_zstd.txt  decoding_perf.cpp  decoding_perf_measurement.vcxproj  decoding_perf_measurement.vcxproj.filters  tools.cpp  tools.h
props_files/: lib_dir.props  lz4_static.props  zstd_static.props
tests/: CMakeLists.txt  binary_bakery_testpaths.h.in  byte_sequencer_tests.cpp  color_tests.cpp  config_tests.cpp  content_meta_tests.cpp  decode_error_test.cpp  decode_error_test_default.cpp  decoder.cpp  decoder.h  decoding_tests_constexpr.cpp  decoding_tests_lz4.cpp  decoding_tests_uncompressed.cpp  decoding_tests_zstd.cpp  decoding_tools.cpp  decoding_tools.h  dual_image_tools_tests.cpp  encoding_tests.cpp  file_tools_tests.cpp  image_tests.cpp  payload_tests.cpp  test_roundtrips.cpp  test_tools.h  test_types.h  tests.cpp  tests.vcxproj  tests.vcxproj.filters  tools_test.cpp  universal_tests.cpp
tests/test_configs/: binary_bakery.toml  c0.toml
tests/test_images/: test_image_rgb_payload.h  test_payload_lz4.h  test_payload_rgb.h  test_payload_uncompressed.h  test_payload_zstd.h
tests_user_error/: decode_error_test_user.cpp  tests_user_error.cpp  tests_user_error.vcxproj  tests_user_error.vcxproj.filters
